feat(scrolling, transitions): implemented view transitions, added locomotive scrolling

--- a/biome.json
+++ b/biome.json
@@ -12,7 +12,8 @@
         "useKeyWithClickEvents": "off"
       },
       "correctness": {
-        "noUnusedVariables": "warn"
+        "noUnusedVariables": "warn",
+        "useExhaustiveDependencies": "off"
       },
       "complexity": {
         "useArrowFunction": "off",
