--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@payloadcms/richtext-lexical": "beta",
     "cross-env": "^7.0.3",
     "graphql": "^16.8.1",
+    "locomotive-scroll": "^5.0.0-beta.21",
     "next": "15.0.0-canary.104",
+    "next-view-transitions": "^0.3.0",
     "payload": "beta",
     "react": "19.0.0-rc-06d0b89e-20240801",
     "react-dom": "19.0.0-rc-06d0b89e-20240801",
