--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-dom": "19.0.0-rc-06d0b89e-20240801",
     "react-intersection-observer": "^9.13.1",
     "sharp": "0.32.6",
-    "tailwind-merge": "^2.5.2"
+    "tailwind-merge": "^2.5.2",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.8.3",
