--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cross-env": "^7.0.3",
     "embla-carousel-react": "^8.3.0",
     "graphql": "^16.8.1",
+    "lenis": "^1.1.16",
     "locomotive-scroll": "^5.0.0-beta.21",
     "next": "15.0.0-canary.104",
     "next-view-transitions": "^0.3.0",
